# AnimX

./: .gitignore  COPYING  Makefile  Makefile.am  NOTES.org  README.md  configure  configure.ac
include/: AnimX-copying.h  AnimX-flag.h  AnimX-gl.h  cio.h  clap.h  config.h.in
src/: AnimX  AnimX-context.c  AnimX-flag.c  AnimX-io.c  AnimX-main.c  AnimX-utils.c  Makefile  Makefile.am  build.rl  context.c  flag.c  main.c  main.cpp  utils.c
src/bak/: 1.c  10.attempt1.refactor.c  11.attempt2.refactor.c  12.working-refactor.c  13.working-refactor.c  14.working-refactor-w-good-timing.c  15.working.threaded.c  16.working.connected-monitors.c  2.c  2.working.c  4.c  4.working.c  5.c  5.indiv-monitor.working.c  6.working.refactor.c  7.better-color.c  8.works-with-picom.c  9.update.c  orig.c
src/include/: AnimX-context.h  AnimX-flag.h  AnimX-gl.h  AnimX-io.h  AnimX-utils.h  clap.h  context.h  dyn_array.h  flag.h  gl.h  utils.h
